--- a/style.css
+++ b/style.css
@@ -7,22 +7,72 @@
 *
 {
     margin: 0em;
+    
 }
 body
 {
 
     background-color: var(--secondary-color);
+   
 }
 nav
 {
     background-color: var(--primary-color);
     padding: 1.5rem;
     margin-bottom: 2rem;
-    display: block;
+
+ 
+ 
 }
 a{
 
     text-decoration: none;
     color: var(--text-color);
-    padding: 1.5rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    font-size: 1rem;
+}
+h1
+
+{
+
+    text-align: center;
+    display: block;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+}
+
+.sub-heading
+{
+
+    display: block;
+    /* font-size: 1.5rem; */
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+   
+    font-weight: bold
+}
+
+.input-body
+{
+    width: 90%;
+    margin: auto;
+    display: block;
+    text-align: center;
+}
+
+.angle-input
+{
+
+    margin: 1rem 0;
+}
+input
+
+{
+
+    padding: 0.5rem;
+    font-size: 1rem;
+    width: 97%;
+    margin: 0.5rem 1rem 1rem 0;
 }
