--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+
 :root
 {
     --primary-color:#FFA000;
@@ -7,6 +10,7 @@
 *
 {
     margin: 0em;
+    font-family: 'PT Sans', sans-serif;
     
 }
 body
@@ -14,6 +18,12 @@ body
 
     background-color: var(--secondary-color);
    
+}
+#heading
+{
+
+ 
+    padding: 1rem;
 }
 nav
 {
@@ -24,13 +34,16 @@ nav
  
  
 }
+
+
 a{
 
     text-decoration: none;
     color: var(--text-color);
     padding: 0.5rem;
     margin: 0.5rem;
-    font-size: 1rem;
+    font-size: 1.25rem;
+
 }
 h1
 
@@ -38,9 +51,10 @@ h1
 
     text-align: center;
     display: block;
-    font-size: 2em;
+    font-size: 2rem;
     font-weight: bold;
     text-align: center;
+    
 }
 
 .sub-heading
@@ -60,12 +74,15 @@ h1
     margin: auto;
     display: block;
     text-align: center;
+    border: solid 0.25rem black;
+    padding: 10px;
+    margin-bottom: 2rem;
 }
 
 .angle-input
 {
 
-    margin: 1rem 0;
+    margin: 1rem ;
 }
 input
 
@@ -75,4 +92,35 @@ input
     font-size: 1rem;
     width: 97%;
     margin: 0.5rem 1rem 1rem 0;
+    font-weight: bold;
+}
+
+button
+{
+    padding: 0.5rem;
+    background: #536DFE;
+    color: var(--text-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
+    width: 30%;
+    font-weight: bold;
+
+    margin: 1rem;
+
+    font-size: 1rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
+}
+label
+{
+    font-size: 1.25rem;
+}
+
+#output
+{
+
+    margin: 1.25rem;
+
 }
