--- a/style2.css
+++ b/style2.css
@@ -19,3 +19,133 @@ body
     background-color: var(--secondary-color);
    
 }
+nav
+{
+    background-color: var(--primary-color);
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+
+ 
+ 
+}
+
+a{
+
+    text-decoration: none;
+    color: var(--text-color);
+    padding: 0.5rem;
+    margin: 0.5rem;
+    font-size: 1.25rem;
+
+}
+h1
+
+{
+
+    text-align: center;
+    display: block;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    
+}
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+button
+{
+    padding: 0.5rem;
+    background: #536DFE;
+    color: var(--text-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
+    width: 20%;
+    font-weight: bold;
+text-align: center;
+margin-top: 1rem;
+    margin-left: 40%;
+    margin-right: 50%;
+
+    font-size: 1rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
+}
+
+#output
+{
+
+    margin: 1.25rem;
+
+}
+#enter-name
+{
+    margin: 1rem;
+ 
+
+
+}
+#user-name
+{
+
+    padding: 0.25rem;
+    font-size: 1rem;
+    width: 20%;
+    margin: 0.5rem 1rem 1rem 0;
+    font-weight: bold;
+}
+
+
+.quiz-form {
+    width: 90%;
+    margin: auto;
+    display: block;
+    font-size: 1.25rem;
+}
+
+.question-container
+{
+    padding: 2rem;
+    border: 0.25rem solid black;
+    border-radius: 0.5rem;
+    margin: 1rem ;
+    display: block;
+
+}
+.quiz-container p {
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
+.quiz-container label
+{
+    padding-top: 0.5rem;
+margin-bottom: 0.5rem;
+    margin-right: 0.5rem;
+}
+
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    text-align: center;
+    margin: 2rem;
+}
+
+h3
+{
+    font-size: 1.25rem;
+    text-align: center;
+}
+#heading
+{
+
+ 
+    padding: 1rem;
+}
