--- a/hypotenuse.css
+++ b/hypotenuse.css
@@ -49,10 +49,6 @@ h1
     text-align: center;
     
 }
-form {
-    display: block;
-    margin-top: 0em;
-}
 
 button
 {
@@ -67,6 +63,7 @@ text-align: center;
 margin-top: 1rem;
     margin-left: 40%;
     margin-right: 50%;
+    margin-bottom: 1.5rem;
 
     font-size: 1rem;
     -webkit-border-radius: 0.5rem;
@@ -75,78 +72,68 @@ margin-top: 1rem;
     -o-border-radius: 0.5rem;
 }
 
-#output
+
+
+
+.sub-heading
 {
 
-    margin: 1.25rem;
-    color:red;
-
+    display: block;
+    /* font-size: 1.5rem; */
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+   
+    font-weight: bold
 }
-#enter-name
+
+.input-body
 {
-    margin: 1rem;
- 
-
-
+    width: 90%;
+    margin: auto;
+    margin-top: 1.5rem;
+    display: block;
+    text-align: center;
+    border: solid 0.25rem black;
+    padding: 10px;
+    margin-bottom: 2rem;
 }
-#user-name
+
+.angle-input
 {
 
-    padding: 0.25rem;
+    margin: 1rem ;
+}
+input
+
+{
+
+    padding: 0.5rem;
     font-size: 1rem;
-    width: 20%;
+    width: 97%;
     margin: 0.5rem 1rem 1rem 0;
     font-weight: bold;
 }
 
+label
+{
+    font-size: 1.25rem;
+}
 
-.quiz-form {
-    width: 90%;
+#output-display
+{
+    text-align: center;
+    margin: 2rem ;
+    color:red;
+   
+
+}
+
+.formula {
+    text-align: center;
+    width: 50%;
     margin: auto;
-    display: block;
-    font-size: 1.25rem;
-}
-
-.question-container
-{
-    padding: 2rem;
-    border: 0.25rem solid black;
-    border-radius: 0.5rem;
-    margin: 1rem ;
-    display: block;
-
-}
-.quiz-container p {
-    margin-bottom: 1rem;
-    padding: 1rem;
-}
-.quiz-container label
-{
-    padding-top: 0.5rem;
-margin-bottom: 0.5rem;
-    margin-right: 0.5rem;
-}
-
-h2 {
-    display: block;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-align: center;
-    margin: 2rem;
-}
-
-h3
-{
-    font-size: 1.25rem;
-    text-align: center;
-}
-#heading
-{
-
- 
-    padding: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    padding: 0.5rem;
+    border: 2px solid black;
 }
