--- a/hypotenuse.css
+++ b/hypotenuse.css
@@ -57,19 +57,11 @@ button
     color: var(--text-color);
     border: 1px solid var(--primary-color);
     border-radius: 0.5rem;
-    width: 20%;
+    width: 30%;
     font-weight: bold;
-text-align: center;
-margin-top: 1rem;
-    margin-left: 40%;
-    margin-right: 50%;
-    margin-bottom: 1.5rem;
-
+    margin: 1rem;
     font-size: 1rem;
     -webkit-border-radius: 0.5rem;
-    -moz-border-radius: 0.5rem;
-    -ms-border-radius: 0.5rem;
-    -o-border-radius: 0.5rem;
 }
 
 
